--- a/quick_polls/polls/templates/polls/detail.html
+++ b/quick_polls/polls/templates/polls/detail.html
@@ -1,12 +1,14 @@
-<form action="{% url 'polls:vote' question.id %}" method="post">
-    {% csrf_token %}
-    <fieldset>
-        <legend><h1>{{ question.question_text }}</h1></legend>
-        {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+<h1>{{ question.question_text }}</h1>
+
+{% if question.choice_set.all %}
+    <form action="{% url 'polls:vote' question.id %}" method="post">
+        {% csrf_token %}
         {% for choice in question.choice_set.all %}
             <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
             <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
         {% endfor %}
-    </fieldset>
-    <input type="submit" value="Vote">
-</form>
+        <input type="submit" value="Vote">
+    </form>
+{% else %}
+    <p>No choices available for this question.</p>
+{% endif %}
